Refine the UI display and optimze meeting type
commit e113ad321bbb6cb844da2c841a8a30a4c73166fa
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 16:27:58 2025 +0800

    reformat the section types table in the settings

commit 9f5e4b2ced4f9043adecca7798b2d264efb3deac
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 15:42:16 2025 +0800

    update meeting templates and ge style definition

commit 5be854b009d5ff8e081b3d76d3e2f92407e24021
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 14:41:54 2025 +0800

    create a beta badge

commit 924d765e5fe16baf0c6c7f9a571c89e454b3a490
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 14:20:27 2025 +0800

    refine the display of agenda on mobile devices

commit 178f919fcf2f1fc45c715eb0fc5ab60d0200ab71
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 13:42:04 2025 +0800

    add award badge to agenda and correct booking display for past meetings

commit fc58568078fe3d101b24e76823829275b08bcd21
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 14 01:53:15 2025 +0800

    ensure no-wrap for the names in waitlist in the mobile view

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -119,6 +119,18 @@ h1 {
     color: #333;
 }
 
+/*
+  This rule targets the icon (<i>) inside the voted button directly.
+  This increases its specificity to override other color definitions,
+  like the default .icon-btn color or any conflicting styles.
+*/
+.icon-btn.icon-btn-voted i {
+    color: #c0392b; /* A strong red color */
+}
+.icon-btn.icon-btn-voted {
+    cursor: default;
+}
+
 /* --- Closable Alert --- */
 .alert-closable {
     position: relative;
