--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,6 +58,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Inter:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     {% block head_extra %}{% endblock %}
   </head>
   <body>
