add Current_Path and Next_Project in the User model

--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -52,14 +52,14 @@ content %}
     </tr>
     <tr>
       <td><label>Current Path</label></td>
-      <td>{{ user.contact.Working_Path }}</td>
-    </tr>
-    <tr>
-      <td><label>Next Project</label></td>
-      <td>{{ user.contact.Next_Project }}</td>
-    </tr>
-    <tr>
-      <td><label for="bio">Bio:</label></td>
+            <td>{{ user.Current_Path }}</td>
+        </tr>
+        <tr>
+            <td><strong>Next Project:</strong></td>
+            <td>{{ user.Next_Project }}</td>
+        </tr>
+        <tr>
+            <td><strong>Completed Levels:</strong></td>
       <td>
         <textarea
           id="bio"
